# vdecent-app-sizing

./: .gitignore  DEVELOPMENT_PLAN.md  README.md  pyproject.toml
docs/: V-Decent_Application_Sizing_Resource_Categorization_Blueprint.md  vdecent-sizing-CLI.md
tests/: test_formulas.py  test_profiler.py
vdecent_size/: __init__.py  cli.py  formulas.py  profiler.py
